# Visible-Agent-Loop-Protocol

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PRIVACY.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SPEC.md  SUPPORT.md  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmarks/: dispatch-size-baseline.json
docs/: adapter-checklist.md  auto-visible-mode.md  capability-routing.md  catalog.md  cli-audit.md  community.md  comparison.md  compound-learning-loop.md  context-compression.md  correction-cycle.md  dispatch-receipts.md  doctor.md  failure-gallery.md  faq.md  index.md  intelligent-routing.md  local-overlays.md  maintainer-governance.md  manual-mode.md  minimal-audit-demo.md  platform-support.md  profiles.md  project-status.md  provider-matrix.md  quickstart.md  routing-feedback.md  runtime-adapters.md  runtime-preflight.md  runtime.md  schema-versioning.md  skill-recommendation.md  squad-routing.md  task-state-machine.md  troubleshooting.md  twelve-layer-nip-matrix.md  v0.3-implementation.md  visual-flow.md  when-agent-done-is-not-done.md  workspace.md
examples/: context-policy.json  delegation-policy.json  dispatch.md  exception-wake.json  historical-audit-boundary.json  local-overlay.json  model-aware-provider-matrix.json  routing.json  submission-dependencies.json  task-folder-tree.md  trigger-policy.json  wait-events.jsonl  wake-result.json
schemas/: agent-recommendations.schema.json  attention-map.schema.json  automation-policy.schema.json  (+47 more)
(+207 files in other folders)
