[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "visible-agent-loop-protocol"
version = "0.2.0"
description = "Reference CLI for the Visible Agent Loop Protocol"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Visible Agent Loop Protocol maintainers" }
]
keywords = [
  "agent",
  "automation",
  "evidence",
  "protocol",
  "runtime"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "jsonschema>=4.0"
]

[project.scripts]
valp = "valp_cli.cli:main"

[project.urls]
Homepage = "https://github.com/wcqxgjy6d8-pixel/Visible-Agent-Loop-Protocol"
Repository = "https://github.com/wcqxgjy6d8-pixel/Visible-Agent-Loop-Protocol"

[tool.setuptools.packages.find]
include = ["valp_cli*"]
